// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LcPicture component should handle isVisible prop isVisible is false should render correctly if thumbnail is disabled 1`] = `

<div class="lc-picture"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
  </div>
</div>

`;

exports[`LcPicture component should handle isVisible prop isVisible is false should render thumbnail correctly 1`] = `

<div class="lc-picture lc-picture_has-thumbnail"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
    <img class="lc-picture__full-size-block lc-picture__thumbnail"
         src="https://avatars.mds.yandex.net/test-src/lqip"
         width="200"
         height="100"
    >
  </div>
</div>

`;

exports[`LcPicture component should handle isVisible prop isVisible is true should render correctly if thumbnail is disabled and image is downloaded 1`] = `

<div class="lc-picture"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
    <picture class="lc-picture__full-size-block">
      <source media="(max-width: 360px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_360 1x, https://avatars.mds.yandex.net/test-src/width_360x2 2x"
      >
      <source media="(max-width: 480px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_480 1x, https://avatars.mds.yandex.net/test-src/width_480x2 2x"
      >
      <source media="(max-width: 768px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_768 1x, https://avatars.mds.yandex.net/test-src/width_768x2 2x"
      >
      <source media="(max-width: 1280px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1280 1x, https://avatars.mds.yandex.net/test-src/width_1280x2 2x"
      >
      <source media="(max-width: 1600px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1600 1x, https://avatars.mds.yandex.net/test-src/width_1600x2 2x"
      >
      <source media="(max-width: 1920px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1920 1x, https://avatars.mds.yandex.net/test-src/width_1920x2 2x"
      >
      <source media="(max-width: 2560px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_2560 1x, https://avatars.mds.yandex.net/test-src/width_2560x2 2x"
      >
      <img class="lc-picture__full-size-block lc-picture__image lc-picture__image_loaded"
           src="https://avatars.mds.yandex.net/test-src/fallback"
           width="200"
           height="100"
      >
    </picture>
  </div>
</div>

`;

exports[`LcPicture component should handle isVisible prop isVisible is true should render correctly if thumbnail is disabled and image is not loaded 1`] = `

<div class="lc-picture"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
    <picture class="lc-picture__full-size-block">
      <source media="(max-width: 360px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_360 1x, https://avatars.mds.yandex.net/test-src/width_360x2 2x"
      >
      <source media="(max-width: 480px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_480 1x, https://avatars.mds.yandex.net/test-src/width_480x2 2x"
      >
      <source media="(max-width: 768px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_768 1x, https://avatars.mds.yandex.net/test-src/width_768x2 2x"
      >
      <source media="(max-width: 1280px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1280 1x, https://avatars.mds.yandex.net/test-src/width_1280x2 2x"
      >
      <source media="(max-width: 1600px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1600 1x, https://avatars.mds.yandex.net/test-src/width_1600x2 2x"
      >
      <source media="(max-width: 1920px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1920 1x, https://avatars.mds.yandex.net/test-src/width_1920x2 2x"
      >
      <source media="(max-width: 2560px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_2560 1x, https://avatars.mds.yandex.net/test-src/width_2560x2 2x"
      >
      <img class="lc-picture__full-size-block lc-picture__image"
           src="https://avatars.mds.yandex.net/test-src/fallback"
           width="200"
           height="100"
      >
    </picture>
  </div>
</div>

`;

exports[`LcPicture component should handle isVisible prop isVisible is true should render thumbnail and image correctly after image is downloaded 1`] = `

<div class="lc-picture lc-picture_has-thumbnail"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
    <picture class="lc-picture__full-size-block">
      <source media="(max-width: 360px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_360 1x, https://avatars.mds.yandex.net/test-src/width_360x2 2x"
      >
      <source media="(max-width: 480px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_480 1x, https://avatars.mds.yandex.net/test-src/width_480x2 2x"
      >
      <source media="(max-width: 768px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_768 1x, https://avatars.mds.yandex.net/test-src/width_768x2 2x"
      >
      <source media="(max-width: 1280px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1280 1x, https://avatars.mds.yandex.net/test-src/width_1280x2 2x"
      >
      <source media="(max-width: 1600px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1600 1x, https://avatars.mds.yandex.net/test-src/width_1600x2 2x"
      >
      <source media="(max-width: 1920px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1920 1x, https://avatars.mds.yandex.net/test-src/width_1920x2 2x"
      >
      <source media="(max-width: 2560px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_2560 1x, https://avatars.mds.yandex.net/test-src/width_2560x2 2x"
      >
      <img class="lc-picture__full-size-block lc-picture__image lc-picture__image_loaded"
           src="https://avatars.mds.yandex.net/test-src/fallback"
           width="200"
           height="100"
      >
    </picture>
    <img class="lc-picture__full-size-block lc-picture__thumbnail lc-picture__thumbnail_transparent"
         src="https://avatars.mds.yandex.net/test-src/lqip"
         width="200"
         height="100"
    >
  </div>
</div>

`;

exports[`LcPicture component should handle isVisible prop isVisible is true should render thumbnail and image correctly while image is not loaded 1`] = `

<div class="lc-picture lc-picture_has-thumbnail"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
    <picture class="lc-picture__full-size-block">
      <source media="(max-width: 360px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_360 1x, https://avatars.mds.yandex.net/test-src/width_360x2 2x"
      >
      <source media="(max-width: 480px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_480 1x, https://avatars.mds.yandex.net/test-src/width_480x2 2x"
      >
      <source media="(max-width: 768px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_768 1x, https://avatars.mds.yandex.net/test-src/width_768x2 2x"
      >
      <source media="(max-width: 1280px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1280 1x, https://avatars.mds.yandex.net/test-src/width_1280x2 2x"
      >
      <source media="(max-width: 1600px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1600 1x, https://avatars.mds.yandex.net/test-src/width_1600x2 2x"
      >
      <source media="(max-width: 1920px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_1920 1x, https://avatars.mds.yandex.net/test-src/width_1920x2 2x"
      >
      <source media="(max-width: 2560px)"
              srcset="https://avatars.mds.yandex.net/test-src/width_2560 1x, https://avatars.mds.yandex.net/test-src/width_2560x2 2x"
      >
      <img class="lc-picture__full-size-block lc-picture__image"
           src="https://avatars.mds.yandex.net/test-src/fallback"
           width="200"
           height="100"
      >
    </picture>
    <img class="lc-picture__full-size-block lc-picture__thumbnail lc-picture__thumbnail_pulsing"
         src="https://avatars.mds.yandex.net/test-src/lqip"
         width="200"
         height="100"
    >
  </div>
</div>

`;

exports[`LcPicture component should handle isVisible prop isVisible is true should render thumbnail and original image correctly after image is downloaded 1`] = `

<div class="lc-picture lc-picture_has-thumbnail"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
    <img class="lc-picture__full-size-block lc-picture__image lc-picture__image_loaded"
         src="https://avatars.mds.yandex.net/test-src/orig"
         width="200"
         height="100"
    >
    <img class="lc-picture__full-size-block lc-picture__thumbnail lc-picture__thumbnail_transparent"
         src="https://avatars.mds.yandex.net/test-src/lqip"
         width="200"
         height="100"
    >
  </div>
</div>

`;

exports[`LcPicture component should render legacy image should render correct image if mimetype is svg 1`] = `

<div class="lc-picture lc-picture_has-thumbnail"
     style="width: 200px;"
>
  <div style="padding-bottom: 50%;">
    <img class="lc-picture__full-size-block lc-picture__image"
         src="https://avatars.mds.yandex.net/test-src/orig"
         width="200"
         height="100"
    >
    <img class="lc-picture__full-size-block lc-picture__thumbnail lc-picture__thumbnail_pulsing"
         src="https://avatars.mds.yandex.net/test-src/lqip"
         width="200"
         height="100"
    >
  </div>
</div>

`;

exports[`LcPicture component should render legacy image should render correct image if value has no height 1`] = `

<img class="lc-picture"
     src="http://ya.ru/image.png"
>

`;

exports[`LcPicture component should render legacy image should render correct image if value has no width 1`] = `

<img class="lc-picture"
     src="http://ya.ru/image.png"
>

`;

exports[`LcPicture component should render legacy image should render correct image if value is string 1`] = `

<img class="lc-picture"
     src="http://ya.ru/image.png"
>

`;
